    class \code{Date} directly.

    \item The \code{ranef()}-method for \code{"hhh4"} fits gained a
    logical argument \code{intercept} to extract the unit-specific
    intercepts of the log-linear predictors instead of the default
    zero-mean deviations around the fixed intercepts.
    The corresponding \code{plot} method (\code{type="ri"}) gained an
    argument \code{log}: if set to \code{FALSE} random effects are
    \code{exp}-transformed and thus show multiplicative effects.
  }
}

\subsection{MINOR CHANGES}{
  \itemize{
    \item \code{W_np()}'s argument \code{to0} has been renamed to
    \code{truncate}. The old name still works but is deprecated.
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item For \code{farringtonFlexible()} with multivariate time series,
    only the last unit had stored the additional control items
    (exceedence scores, p-values, ...), all others were 0.
    [reported by Johannes Bracher]
    
    \item Using negative indices to exclude time points from an
    \code{"sts"} object (e.g., \code{x[-1,]}) is now supported and
    equivalent to the corresponding subset expression of retained
    indexes (\code{x[2:nrow(x),]}) in resetting the \code{start} and
    \code{epoch} slots. [reported by Johannes Bracher]

    \item The supplementary p-values returned by \code{farringtonFlexible()}
    were wrong for the default approach, where \code{thresholdMethod="delta"}
    (i.e., the original Farrington method) and a power transformation
    was applied to the data (\code{powertrans != "none"}).
    [reported by Lore Merdrignac]

    \item \code{epidataCS2sts()} no longer transfers the
    \code{stgrid$BLOCK} indices to the \code{epoch} slot of the
    resulting \code{"sts"} object (to avoid \code{epoch[1] != 1}
    scenarios).

    \item \code{sts_creation()} hard-coded \code{start = c(2006, 1)}.

    \item For weekly \code{"sts"} data with \code{epochAsDate=TRUE},
    the \code{as.data.frame()} method computed \code{freq} by